--- a/.github/workflows/master_github-copilot-challenge-app.yml
+++ b/.github/workflows/master_github-copilot-challenge-app.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy ASP.Net Core app to Azure Web App - GitHub-Copilot-Challenge-App
+name: Build and deploy ASP app to Azure Web App - GitHub-Copilot-Challenge-App
 
 on:
   push:
@@ -16,23 +16,23 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up .NET Core
-        uses: actions/setup-dotnet@v1
-        with:
-          dotnet-version: '8.x'
-          include-prerelease: true
+      - name: Setup MSBuild path
+        uses: microsoft/setup-msbuild@v1.0.2
 
-      - name: Build with dotnet
-        run: dotnet build --configuration Release
+      - name: Setup NuGet
+        uses: NuGet/setup-nuget@v1.0.5
 
-      - name: dotnet publish
-        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+      - name: Restore NuGet packages
+        run: nuget restore
+
+      - name: Publish to folder
+        run: msbuild /nologo /verbosity:m /t:Build /t:pipelinePreDeployCopyAllFilesToOneFolder /p:_PackageTempDir="\published\"
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
         with:
-          name: .net-app
-          path: ${{env.DOTNET_ROOT}}/myapp
+          name: ASP-app
+          path: '/published/**'
 
   deploy:
     runs-on: windows-latest
@@ -47,14 +47,14 @@ jobs:
       - name: Download artifact from build job
         uses: actions/download-artifact@v3
         with:
-          name: .net-app
+          name: ASP-app
       
       - name: Login to Azure
         uses: azure/login@v1
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_9E8EB6A8C8EF4745937E5BD7BC7050A5 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_F6681F213F274C818E1A829CB0841BE3 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_0D97F235A27E418791CDB9784C8508D5 }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_DA10352E82F0495C9CAB0675A62188B7 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_F1880BB1D0A54F31B5BD30DC1E70967F }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_928DC167F4D54F59A1BEBE7CD3E82121 }}
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
